clean debian dependences

--- a/ansible/debian/tasks/dependeces.yml
+++ b/ansible/debian/tasks/dependeces.yml
@@ -1,15 +1,19 @@
 ---
 - name: Update Apt cache
-  apt: update_cache=yes
+  apt: >
+    update_cache=yes
 
 #
 #- name: Upgrade Packeges
 #  apt: upgrade=dist
 
 - name: Install Dependences
-  apt: name={{ item }} state=installed force=yes
+  apt: >
+    name={{ item }}
+    state=installed
+    force=yes
+
   with_items:
-    - lxde-core
     - vim
     - git
     - ntp
