--- a/ansible/emqttd/tasks/install-emqtt.yml
+++ b/ansible/emqttd/tasks/install-emqtt.yml
@@ -4,7 +4,7 @@
       dest=/tmp/
       url="http://emqtt.io/downloads/ubuntu"
 
-    - name: Unzip emqtt
-      unarchive: >
-        src=/tmp/ubuntu
-        dest=/srv/
+  - name: Unzip emqtt
+    unarchive: >
+      src=/tmp/emqttd-ubuntu64-0.13.0-beta-20151108.zip
+      dest=/srv/
