add mosquitto in site.yml

--- a/ansible/mosquitto/tasks/main.yml
+++ b/ansible/mosquitto/tasks/main.yml
@@ -1,36 +1,2 @@
 ---
-- hosts: localhost
-  tasks:
-    - name: Download Mosquitto's GPG key
-      get_url: >
-        dest=/tmp/
-        url="http://repo.mosquitto.org/debian/mosquitto-repo.gpg.key"
-      tags: [mosquitto]
-
-    - name: Add PGP key to Apt
-      command: apt-key add /tmp/mosquitto-repo.gpg.key
-      tags: [mosquitto]
-
-    - name: Download Mosquitto's Debian repository
-      get_url: >
-        dest=/etc/apt/sources.list.d/
-        url="http://repo.mosquitto.org/debian/mosquitto-jessie.list"
-      tags: [mosquitto]
-
-    - name: Update Apt Cache
-      apt: >
-        update_cache=yes
-
-    - name: Install Mosquitto
-      apt: >
-        name=mosquitto
-        state=installed
-        force=yes
-      tags: [mosquitto]
-
-    - name: Install Mosquitto-clients
-      apt: >
-        name=mosquitto-clients
-        state=installed
-        force=yes
-      tags: [mosquitto]
+  - include: install.tyml
