--- a/ansible/emqttd/tasks/install-emqtt.yml
+++ b/ansible/emqttd/tasks/install-emqtt.yml
@@ -1,10 +1,14 @@
 ---
   - name: Download emqtt
     get_url: >
-      dest=/tmp/
+      dest=/srv/
       url="http://emqtt.io/downloads/ubuntu"
 
+- name: Unzip emqtt
+  command: unzip /tmp/emqttd-ubuntu64-0.13.0-beta-20151108.zip
+  
   - name: Unzip emqtt
-    unarchive: >
-      src=/tmp/emqttd-ubuntu64-0.13.0-beta-20151108.zip
-      dest=/srv/
+    command:unzip emqttd-ubuntu64-0.13.0-beta-20151108.zip
+    args: >
+      chdir: /srv/
+    sudo: yes
