--- a/ansible/emqttd/tasks/install-emqtt.yml
+++ b/ansible/emqttd/tasks/install-emqtt.yml
@@ -4,11 +4,24 @@
       dest=/srv/
       url="http://emqtt.io/downloads/ubuntu"
 
-- name: Unzip emqtt
-  command: unzip /tmp/emqttd-ubuntu64-0.13.0-beta-20151108.zip
-  
   - name: Unzip emqtt
-    command:unzip emqttd-ubuntu64-0.13.0-beta-20151108.zip
+    command: unzip /tmp/emqttd-ubuntu64-0.13.0-beta-20151108.zip
     args: >
-      chdir: /srv/
+      chdir: /opt/
+    sudo: yes
+
+  - name: Install emqttd daemon
+    copy: >
+      src="emqttd/etc/init.d/emqttd"
+      dest="/etc/init.d/"
+      mode="-rwxr-xr-x"
+    sudo: yes
+
+  - name: Add to daemon list
+    command: chkconfig --add emqttd
+
+  - name: Start emqttd daemon
+    service: >
+      name=emqttd
+      enabled=yes
     sudo: yes
