--- a/ansible/emqttd/tasks/install-emqtt.yml
+++ b/ansible/emqttd/tasks/install-emqtt.yml
@@ -1,21 +1,17 @@
 ---
   - name: Download emqtt
     get_url: >
-      dest=/srv/
+      dest=/opt/
       url="http://emqtt.io/downloads/ubuntu"
 
   - name: Unzip emqtt
-    command: unzip /tmp/emqttd-ubuntu64-0.13.0-beta-20151108.zip
-    args: >
-      chdir: /opt/
-    sudo: yes
+    command: unzip /opt/emqttd-ubuntu64-0.13.0-beta-20151108.zip
 
   - name: Install emqttd daemon
     copy: >
-      src="emqttd/etc/init.d/emqttd"
+      src="../etc/init.d/emqttd"
       dest="/etc/init.d/"
       mode="-rwxr-xr-x"
-    sudo: yes
 
   - name: Add to daemon list
     command: chkconfig --add emqttd
@@ -24,4 +20,3 @@
     service: >
       name=emqttd
       enabled=yes
-    sudo: yes
